// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CursorExporter > All Severities > handles error, warn, and info severities 1`] = `
"---
---
## Rule: critical.security

**Severity:** error

**Applies to:**
- \`**/*\`

Security violations must be fixed immediately.

## Rule: important.performance

**Severity:** warn

**Applies to:**
- \`**/*.ts\`

Performance issues should be addressed.

## Rule: nice-to-have.style

**Severity:** info

**Applies to:**
- \`**/*.ts\`

Style suggestions to consider.

---

**Generated by AlignTrue**
Content Hash: 8240511830b1fb8e49556a69760515943291f7882bbafda1d250669302a0ecfb

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Basic Export > exports multiple rules to single .mdc file 1`] = `
"---
globs:
  - "**/*.ts"
---
## Rule: testing.require-tests

**Severity:** error

**Applies to:**
- \`**/*.ts\`

All features must have tests.

## Rule: docs.update-readme

**Severity:** warn

**Applies to:**
- \`README.md\`

Keep the README up to date with changes.

## Rule: style.use-prettier

**Severity:** info

**Applies to:**
- \`**/*.{ts,tsx,js,jsx}\`

Use Prettier for consistent formatting.

---

**Generated by AlignTrue**
Content Hash: 430f4e606cb24006cf0fab0deaef2412bc940504f1a2925b5ace04ce5f545f59

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Basic Export > exports single rule to .mdc file 1`] = `
"---
globs:
  - "**/*.ts"
  - "**/*.tsx"
---
## Rule: testing.require-tests

**Severity:** warn

**Applies to:**
- \`**/*.ts\`
- \`**/*.tsx\`

All features must have tests to ensure reliability.
Write tests alongside your code, not as an afterthought.

---

**Generated by AlignTrue**
Content Hash: 7e39b22b4efdcbafb641f32942ee7d9f1060e765e552601c03cb4965efe2daa4

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Vendor.cursor Metadata Extraction > extracts vendor.cursor fields to frontmatter 1`] = `
"---
globs:
  - "**/*.ts"
cursor:
  testing.require-tests:
    ai_hint: "Suggest test scaffolding with vitest"
    session_metadata: {"created":"2024-01-01"}
---
## Rule: testing.require-tests

**Severity:** warn

**Applies to:**
- \`**/*.ts\`

All features must have tests.

---

**Generated by AlignTrue**
Content Hash: ad9dd2c6dd7d874e4916ef796cdddd184d201c857a80541b70b63e41f674e7ef

**Fidelity Notes:**
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;

exports[`CursorExporter > Vendor.cursor Metadata Extraction > handles mixed vendor namespaces 1`] = `
"---
globs:
  - "**/*.ts"
cursor:
  testing.require-tests:
    ai_hint: "Suggest vitest"
---
## Rule: testing.require-tests

**Severity:** warn

**Applies to:**
- \`**/*.ts\`

All features must have tests.

---

**Generated by AlignTrue**
Content Hash: 362dc3efecaf82c6d8714dc5b27007102902a3541a3ebd89e13a4c7570c4eb40

**Fidelity Notes:**
- Vendor metadata for other agents preserved but not active: copilot, vscode
- applies_to patterns preserved in metadata but not enforced by Cursor
"
`;
